--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,9 @@
     <link rel="stylesheet" href="./assets/css/themify-icons.css">
     <link rel="stylesheet" href="./assets/css/feather.css">
     <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/css/main.css">
+    <!-- <link rel="stylesheet" href="./assets/css/main.css"> -->
     <link rel="stylesheet" href="./assets/css/emoji.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/main.css">
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
