SC-35 add 404NotFound Page, add new room chat

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <!-- <link rel="stylesheet" href="./assets/css/main.css"> -->
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/emoji.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/main.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/notfound404.css">
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
